Fixed horizontal scroll

--- a/assets/sass/_general.scss
+++ b/assets/sass/_general.scss
@@ -6,8 +6,6 @@ html,
 body {
   font-size: $fontSize;
   background-color: $background;
-  //TODO investigate which element causes horizontal scroll
-  overflow-x: hidden;
 }
 
 body {
