--- a/assets/sass/components/_Banner.scss
+++ b/assets/sass/components/_Banner.scss
@@ -1,5 +1,6 @@
 .Banner {
   width: 100vw;
+  max-width: 100%;
   height: auto;
 }
 .Banner-Header {
