--- a/assets/sass/components/_Container.scss
+++ b/assets/sass/components/_Container.scss
@@ -28,6 +28,7 @@
 .Container--Front{
   margin: 0;
   width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
